--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build with Next.js
-        run: npm run build
+        run: |
+          touch .nojekyll
+          npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
