--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build with Next.js
         run: |
           touch .nojekyll
-          npm run build
+          NODE_ENV=production npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
