Simplify configuration for GitHub Pages deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,9 +28,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build with Next.js
-        run: |
-          touch .nojekyll
-          NODE_ENV=production npm run build
+        run: npm run build
+      - name: Create .nojekyll file
+        run: touch ./out/.nojekyll
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
