--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,9 +28,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build with Next.js
-        run: npm run build
-      - name: Create .nojekyll file
-        run: touch ./out/.nojekyll
+        run: |
+          npm run build
+          touch ./out/.nojekyll
+          echo "User-agent: *\nAllow: /\nSitemap: https://nlemoff.github.io/portfolio-site/sitemap.xml" > ./out/robots.txt
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
