--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
-    "tailwind-merge": "^1.14.0"
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.5.7",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "autoprefixer": "^10.4.15",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.48.0",
     "eslint-config-next": "^14.0.4",
-    "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.2.2"
   }
 }
